# 6502-System-Emu

./: .gitignore  6502  6502.pro  CMakeLists.txt  CONSTEXPR_FEATURE.md  IMPLEMENTATION_SUMMARY.md  Makefile.test_runner  README.md  TESTING_GUIDE.md  addcarry.cpp  build_test_runner.sh  cpu.cpp  cpu.h  debug_test_failure.sh  flags.cpp  incdec.cpp  lda.cpp  load.cpp  logical.cpp  main.cpp  memory.cpp  memory.h  misc.cpp  shifts.cpp  stack.cpp  store.cpp  subtract.cpp  test_instructions.cpp  test_runner.cpp  test_runner.pro  transfer.cpp  types.h
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pgo.yml
_codeql_build_dir/: 6502_emu
_codeql_build_dir/test/: 6502_tests  6502_tests[1]_include.cmake  6502_tests[1]_tests.cmake
src/: constexpr_example.cpp  main.cpp
src/core/: constexpr_cpu.h  constexpr_cpu_impl.h  constexpr_memory.h  cpu.cpp  cpu.h  display.cpp  display.h  memory.cpp  memory.h  types.h
src/instructions/: addcarry.cpp  branch.cpp  compare.cpp  stack.cpp  store.cpp  subtract.cpp  transfer.cpp
test/: .gitignore  CMakeLists.txt  README.md  addcarrytest.cpp  addcarrytest.h  branchtest.cpp  branchtest.h  comparetest.cpp  comparetest.h  cputest.cpp  cputest.h  flagstest.cpp  flagstest.h  incdectest.cpp  incdectest.h  loadtest.cpp  loadtest.h  logicaltest.cpp  logicaltest.h  main.cpp  misctest.cpp  misctest.h  shiftstest.cpp  shiftstest.h  stacktest.cpp  stacktest.h  storetest.cpp  storetest.h  subtracttest.cpp  subtracttest.h  test  test.pro  transfertest.cpp  transfertest.h
test_programs/: 6502_functional_test.hex  6502_functional_test.xxd  README.md  create_animated_pattern.py  create_pattern_demo.py  snake.asm  verify_tests.sh
